if(NOT CMAKE_BUILD_TYPE STREQUAL "ASAN")
    add_library(pybridge SHARED bridge.cpp custom_dialects.cpp)
    target_link_libraries(pybridge PRIVATE  runner runtime mlir-support scheduler ${LIBS} PRIVATE Arrow::arrow_static PUBLIC "-Wl,--whole-archive ${LLVM_BINARY_DIR}/lib/libMLIRCAPIIR.a  ${LLVM_BINARY_DIR}/lib/libMLIRCAPIDebug.a  ${LLVM_BINARY_DIR}/lib/libMLIRCAPIInterfaces.a ${LLVM_BINARY_DIR}/lib/libMLIRCAPITransforms.a -Wl,--no-whole-archive")
    target_link_options(pybridge PUBLIC -Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/symbols.list)
endif ()